Fixed: Menubar rendering glitches on Firefox when using slot="aside"

--- a/themes/base.css
+++ b/themes/base.css
@@ -972,9 +972,6 @@ x-menubar > x-menuitem {
 x-menubar > x-menuitem[autohidden] {
   display: none;
 }
-x-menubar > x-menuitem[expanded] ~ x-menuitem:not(:has(x-menu)) {
-  pointer-events: none;
-}
 
 /*****************************************************************************************************************/
 
